--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
     <div class="page" id="current">
       <section class="art" aria-label="Scrollable sequoia artwork">
         <!-- Put your sequoia image here -->
-        <img src="assets/sequoia.png" alt="Giant sequoia illustration" loading="eager" />
+        <img src="assets/sequoia.jpg" alt="Giant sequoia illustration" loading="eager" />
 
         <!-- Cards injected here -->
         <div id="cardsLayer" aria-hidden="false"></div>
