--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
   <main>
     <div class="page" id="current">
       <section class="art" aria-label="Scrollable sequoia artwork">
-        <img src="assets/sequoia.png" alt="Giant sequoia illustration" loading="eager" />
+        <img src="assets/sequoia.jpg" alt="Giant sequoia illustration" loading="eager" />
         <div id="cardsLayer"></div>
       </section>
 
