--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
     <div class="topbar__inner">
       <!-- Logo only; clicking opens selection popup -->
       <a class="brand" href="#" id="homeTrigger" aria-label="Open selection">
-        <img src="assets/logo.png" alt="Five Two Three logo" />
+        <img src="assets/Logo.png" alt="Five Two Three logo" />
       </a>
 
       <nav class="tabs" aria-label="Site tabs">
